<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_marginBottom="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgResultIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_medal"
                android:scaleType="fitCenter"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_toRightOf="@id/imgResultIcon"
                android:layout_toLeftOf="@id/imageButtonDeleteResult"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tvQuizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/tvQuizScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tvResultTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result_title"
                    />
                <TextView
                    android:id="@+id/tvResultSaveTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result_auto_save_time"
                    />
            </LinearLayout>
            <ImageButton
                android:id="@+id/imageButtonDeleteResult"
                android:layout_width="28dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_recycle_bin"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:scaleType="fitXY"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>